<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.solid.todolistapp.features.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_calendar" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.solid.todolistapp.features.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" >
        <action
            android:id="@+id/action_navigation_calendar_to_navigation_home"
            app:destination="@id/navigation_home" />
        <argument
            android:name="currentItem"
            app:argType="com.solid.todolistapp.data.model.Todo" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.solid.todolistapp.features.alarm.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <activity android:id="@+id/navigation_todo"
        android:name="com.solid.todolistapp.features.task.NewTodoActivity"
        android:label="Add Todo"
        tools:layout="@layout/new_todo_activity"/>
</navigation>