<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.task.NewTodoActivity">


    <ImageView
        android:id="@+id/back_img_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menu_img_view"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_gravity="end"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="@+id/back_img_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_img_view" />

    <TextView
        android:id="@+id/greet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/create_task"
        android:textColor="@color/grey"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_img_view" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/task_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/task_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="60dp"
                android:backgroundTint="@color/light_grey"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:cornerRadius="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/family_button"
                app:strokeColor="@color/category" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="29dp"
                android:layout_height="32dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_bell"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:srcCompat="@drawable/ic_bell" />

            <TextView
                android:id="@+id/alarm_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="@string/alarm"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_date"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/task_description" />

            <TextView
                android:id="@+id/date_picker_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/category_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/category_string"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/low_button" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/remind_me_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/remind_me_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="@string/remind_me"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/remind_me_toggle"
                app:layout_constraintStart_toEndOf="@+id/remind_me_toggle"
                app:layout_constraintTop_toTopOf="@+id/remind_me_toggle" />

            <TextView
                android:id="@+id/priority_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/priority"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/remind_me_toggle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/medium_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/medium"
                android:textAllCaps="false"
                android:textColor="#020202"
                android:textSize="16sp"
                app:cornerRadius="7dp"
                app:layout_constraintBottom_toBottomOf="@+id/low_button"
                app:layout_constraintEnd_toStartOf="@+id/high_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/low_button"
                app:layout_constraintTop_toTopOf="@+id/low_button"
                app:strokeColor="@color/category" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/low_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:text="@string/low"
                android:textAllCaps="false"
                android:textColor="#2E7D32"
                android:textSize="16sp"
                app:cornerRadius="7dp"
                app:layout_constraintStart_toStartOf="@+id/priority_text"
                app:layout_constraintTop_toBottomOf="@+id/priority_text"
                app:strokeColor="@color/checked" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/high_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/high"
                android:textAllCaps="false"
                android:textColor="#D32F2F"
                android:textSize="16sp"
                app:cornerRadius="7dp"
                app:layout_constraintBottom_toBottomOf="@+id/medium_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/medium_button"
                app:layout_constraintTop_toTopOf="@+id/medium_button"
                app:layout_constraintVertical_bias="0.0"
                app:strokeColor="@color/priority" />

            <EditText
                android:id="@+id/task_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/task_description"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_name" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/work_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/category"
                android:text="@string/category"
                android:textAllCaps="false"
                android:textColor="@color/category_color"
                android:textSize="16sp"
                app:cornerRadius="7dp"
                app:layout_constraintStart_toStartOf="@+id/category_text"
                app:layout_constraintTop_toBottomOf="@+id/category_text"
                app:strokeColor="@color/checked" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/family_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/family_background"
                android:text="@string/family"
                android:textAllCaps="false"
                android:textColor="@color/family"
                android:textSize="16sp"
                app:cornerRadius="7dp"
                app:layout_constraintBottom_toBottomOf="@+id/work_button"
                app:layout_constraintEnd_toStartOf="@+id/school_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/work_button"
                app:layout_constraintTop_toTopOf="@+id/work_button"
                app:layout_constraintVertical_bias="1.0"
                app:strokeColor="@color/category" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/school_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/school"
                android:text="@string/school"
                android:textAllCaps="false"
                android:textColor="@color/school_text"
                android:textSize="16sp"
                app:cornerRadius="7dp"
                app:layout_constraintBottom_toBottomOf="@+id/family_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/family_button"
                app:layout_constraintTop_toTopOf="@+id/family_button"
                app:layout_constraintVertical_bias="1.0"
                app:strokeColor="@color/priority" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="52dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>